change import and media

--- a/htmlcss-task-4/css/global.css
+++ b/htmlcss-task-4/css/global.css
@@ -1,2 +1,2 @@
-@import url("style1.css") screen and (min-width: 1400px);
-@import url("style2.css") screen and (min-width: 768px);
+@import url("style1.css");
+@import url("style2.css") screen and (min-width: 320px) and (max-width: 1024px);
