--- a/htmlcss-task-4/css/style-task2.css
+++ b/htmlcss-task-4/css/style-task2.css
@@ -50,8 +50,8 @@ body {
 }
 
 @media only screen 
-and (min-device-width: 768px) 
-and (max-device-width: 1024px) {
+and (min-width: 768px) 
+and (max-width: 1024px) {
   /* iPad */
   .red {
     width: 100%;
@@ -89,8 +89,8 @@ and (max-device-width: 1024px) {
 }
 
 @media only screen 
-and (min-device-width: 375px) 
-and (max-device-width: 667px) {
+and (min-width: 320px) 
+and (max-width: 768px) {
   /* iPhone 6 */
   .red {
     width: 100%;
