--- a/htmlcss-task-4/css/style1.css
+++ b/htmlcss-task-4/css/style1.css
@@ -1,5 +1,3 @@
-/* @import url("style-760.css"); */
-
 html, 
 body {
   margin: 0;
@@ -11,7 +9,8 @@ p {
 }
 
 .main-header {
-  max-width: 1400px;
+  display: block;
+  max-width: 1000px;
   margin: 0 auto;
   background: #808080;
   border-radius: 0 0 30px 30px;
@@ -22,20 +21,24 @@ p {
   font-size: 50px;
   text-decoration: underline;
   margin: 0;
+  padding: 0;
 }
 
 .main-page {
-  max-width: 1200px;
-  margin: 2% auto 45%;
+  display: block;
+  max-width: 1000px;
+  margin: 30px auto 500px;
 }
 
 .main-content {
   position: relative;
+  max-width: 800px;
+  margin: 0 auto;
   background: #a9a9a9;
   border-radius: 30px;
 }
 
-.main-header,
+.header-content,
 .main-content,
 .footer-content {
   box-sizing: border-box;
@@ -79,7 +82,8 @@ p {
 }
 
 .main-footer {
-  max-width: 1400px;
+  display: block;
+  max-width: 1000px;
   margin: 0 auto;
   background: #000000;
   border-radius: 30px 30px 0 0;
@@ -88,4 +92,5 @@ p {
 .footer-content p {
   color: #ffffff;
   margin: 0;
+  padding: 0;
 }
