--- a/htmlcss-task-5/css/style.css
+++ b/htmlcss-task-5/css/style.css
@@ -11,9 +11,9 @@ body {
 
 .top-header {
   display: flex;
-  justify-content: space-between;
-  max-width: 1500px;
-  margin: 0 5%;
+  justify-content: space-around;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .logo,
@@ -31,11 +31,11 @@ body {
 
 .nav-list {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   list-style: none;
-  max-width: 1500px;
+  max-width: 1440px;
   padding: 0;
-  margin: 0 5%;
+  margin: 0 auto;
 }
 
 .nav-item {
@@ -49,12 +49,14 @@ body {
 }
 
 .sidebar {
-  width: 400px;
+  width: 330px;
 }
 
 .main-page {
   display: flex;
   justify-content: space-between;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .sidebar .nav-list {
@@ -69,18 +71,19 @@ body {
 
 .main-content {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-wrap: wrap;
-  margin: 0 5% 0 0;
+  max-width: 1000px;
+  padding: 0 10px;
 }
 
 .img {
-  margin: 5% 0 0 3%;
+  margin: 30px 0;
 }
 
 .img-item {
-  width: 250px;
-  height: 250px;
+  width: 245px;
+  height: 245px;
   border: 3px solid #00cac0;
   border-radius: 50%;
 }
@@ -91,7 +94,7 @@ body {
   text-align: center;
 }
 
-@media only screen and (min-width: 768px) and (max-width: 1120px) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
 
   .logo,
   .search {
@@ -99,7 +102,7 @@ body {
   }
 
   .main-content {
-    justify-content: space-around;
+    padding: 0 20px;
   }
 }
 
