--- a/htmlcss-task-9/css/style.css
+++ b/htmlcss-task-9/css/style.css
@@ -7,10 +7,14 @@
   padding: 20px 0;
 }
 .card {
-  margin: 0 auto;
+  margin: 0 auto 30px;
 }
 
 .main-footer {
   font-size: 0.8rem;
   text-align: center;
+}
+
+.carousel-item {
+  max-height: 500px;
 }
