complete htmlcss-task-12

--- a/htmlcss-task-12/css/style.css
+++ b/htmlcss-task-12/css/style.css
@@ -16,6 +16,9 @@
     justify-content: center;
 }
 
-.hide {
-    display: none;
+td.text {
+    font-weight: 600;
+    font-size: 30px;
+    text-align: center;
+    padding: 100px;
 }
